--- a/module-2/hackett_Mod2_2.html
+++ b/module-2/hackett_Mod2_2.html
@@ -17,7 +17,7 @@
 <body>
 <div id="container">    
     <h1>Assignment 2.2 - Building a Web Page Exercise - Part 2</h1>
-    <h2>Linking CSS</h2>
+    <h2>Chapter 1: Linking CSS</h2>
     <p class="intro">Hello, my name is Brandon Hackett. I am currently studying software development at Bellevue University. I am also working full time and live in Florida. I have a husband and chocolate lab.</p>
     <p><span class="sentence"> I grew up in a small town in Oklahoma.</span> It was so small, that I graduated high school with 96 of others. I went to school with the same kids K-12. I am grateful for that upbringing but did have its challenges.</p> 
     <p>I have two older sisters. Connie has one child, Greg. Becky has two children, Jake and Jessica. Jessica has one daughter. My sisters are much older than I am. My father is 40 years older than I am. </p>
