--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<!-- Brandon Hackett: Assignment 2.2 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Brandon Hackett's CSD 340 Landing Page</title>
+    <link rel="stylesheet" href="site.css" type="text/css" />  
+</head>
+<div id="container"> 
+    <h1>Brandon Hackett's CSD 340 Landing Page</h1>
+    <h2>CSD 340 Web Development with HTML and CSS</h2>
+    <hr>
+    <h3>Module Assignments</h3>
+    <ul>
+        <li><a href="module-1/hackett_Mod1_3.html">Assignment 1.3</a></li>
+        <li><a href="module-2/hackett_Mod2_2.html">Assignment 2.2</a></li>
+        <li><a href="">Assignment 3.3</a></li>
+    </ul>
+    <h3>Projects</h3>
+    <ul>
+        <li><a href="">bioSite Project Home Page</a></li>
+    </ul>
+    <h4>Important Links</h4>
+    <ul>
+        <li><a href="https://validator.w3.org/">W3C HTML Validator</a></li>
+        <li><a href="http://jigsaw.w3.org/css-validator/ ">W3C CSS Validator</a></li>
+        <li><a href="https://www.w3schools.com/html/ ">HTML Tutorial</a></li>
+        <li><a href="https://bruinconnect.bellevue.edu/">BRUIN Connect</a></li>
+    </ul>
+</div>
