--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="module-1/hackett_Mod1_3.html">Assignment 1.3</a></li>
         <li><a href="module-2/hackett_Mod2_2.html">Assignment 2.2</a></li>
         <li><a href="module-3/hackett_Mod3_3.html">Assignment 3.3</a></li>
+        <li><a href="module-4/hackett_Mod4_2.html">Assignment 4.2</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
