--- a/module-4/hackett_Mod4_2.html
+++ b/module-4/hackett_Mod4_2.html
@@ -12,7 +12,7 @@
         <div class="card">
           <h3>Harry Potter and the Chamber of Secrets</h3>
           <figure>
-          <img src="/Users/brandon/csd/csd-340/images/chamber_of_secrets.jpg" alt="Chamber of Secrets">
+          <img src="../images/chamber_of_secrets.jpg" alt="Chamber of Secrets">
           <figcaption>author: J.K. Rowling </figcaption>
           </figure>
         </div>
@@ -20,7 +20,7 @@
         <div class="card">
             <h3>Harry Potter and the Sorcerer's Stone</h3>
             <figure>
-            <img src="/Users/brandon/csd/csd-340/images/sorce_stone.jpg" alt="Sorcerer's Stone">
+            <img src="../images/sorce_stone.jpg" alt="Sorcerer's Stone">
             <figcaption>author: J.K. Rowling </figcaption>
             </figure>
           </div>
@@ -28,7 +28,7 @@
           <div class="card">
             <h3>Harry Potter and the Prisoner of Azkaban</h3>
             <figure>
-            <img src="/Users/brandon/csd/csd-340/images/prisoner_of_azkaban.jpg" alt="Prisoner of Azkaban">
+            <img src="../images/prisoner_of_azkaban.jpg" alt="Prisoner of Azkaban">
             <figcaption>author: J.K. Rowling </figcaption>
             </figure>
           </div>
