--- a/module-8/Hackett_Mod8_2.html
+++ b/module-8/Hackett_Mod8_2.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
     <title>CSD 340 Web Development with HTML and CSS</title>
-    <link rel="stylesheet" href="./Hackett_Mod6_2.css" type="text/css" />  
+    <link rel="stylesheet" href="./Hackett_Mod8_2.css" type="text/css" />  
 </head>
 
 <header>
-    <h1>Assignment 6.2: Build a Web Page - Part 5</h1>
+    <h1>Assignment 8.2: Build a Web Page - Part 6</h1>
 </header>
 
 <div id="navbar">
@@ -17,6 +17,29 @@
 </div>
 
 <div id="container">
+    <div class="card">
+        <div class="card-title">
+           <p>Top 5 Favorite Movies</p> 
+        </div>
+        <div class="card-content">
+         <table>
+            <tr>
+                <th>Movie Name</th>
+                <th>Two Characters</th>
+            </tr>
+            <tr>
+                <td>Harry Potter and the Philosopher's Stone</td>
+                <td><ul>
+                    <li>Harry Potter</li>
+                    <li>Ron Weasley</li>
+                </ul></td>
+            </tr>
+         </table>   
+        </div>
+    </div>
+    <br>
+    <br>
+    
     <div class="card">
         <div class="card-title">
            <p>Top 5 Favorite Foods</p> 
