--- a/module-8/Hackett_Mod8_2.html
+++ b/module-8/Hackett_Mod8_2.html
@@ -34,6 +34,34 @@
                     <li>Ron Weasley</li>
                 </ul></td>
             </tr>
+            <tr>
+                <td>Harry Potter and the Chamber of Secrets</td>
+                <td><ul>
+                    <li>Hermione Granger</li>
+                    <li>Dobby</li>
+                </ul></td>
+            </tr>
+            <tr>
+                <td>Harry Potter and the Prisoner of Azkaban</td>
+                <td><ul>
+                    <li>Professor R. J. Lupin</li>
+                    <li> Sirius Black</li>
+                </ul></td>
+            </tr>
+            <tr>
+                <td>Harry Potter and the Goblet of Fire</td>
+                <td><ul>
+                    <li>Cedric Diggory</li>
+                    <li>Viktor Krum</li>
+                </ul></td>
+            </tr>
+            <tr>
+                <td>Harry Potter and the Half-Blood Prince</td>
+                <td><ul>
+                    <li>Albus Dumbledore</li>
+                    <li>Draco Malfoy</li>
+                </ul></td>
+            </tr>
          </table>   
         </div>
     </div>
