Update css and html mod 8

--- a/module-8/Hackett_Mod8_2.html
+++ b/module-8/Hackett_Mod8_2.html
@@ -16,13 +16,14 @@
     <a href="">Contact</a>
 </div>
 
+<body>
 <div id="container">
     <div class="card">
         <div class="card-title">
            <p>Top 5 Favorite Movies</p> 
         </div>
         <div class="card-content">
-         <table>
+         <table id="movies">
             <tr>
                 <th>Movie Name</th>
                 <th>Two Characters</th>
@@ -89,3 +90,4 @@
 <footer>
     <p><a href="../index.html"> Back to Landing Page</a></p>
 </footer>
+</body>
