--- a/module-8/Hackett_Mod8_2.html
+++ b/module-8/Hackett_Mod8_2.html
@@ -88,6 +88,7 @@
 </div>
 
 <footer>
-    <p><a href="../index.html"> Back to Landing Page</a></p>
+    <p class="right"><a href="../index.html"> Back to Landing Page</a></p>
+    <p class="left">&copy 2024 Hackett</p>
 </footer>
 </body>
