--- a/module-8/Hackett_Mod8_2.html
+++ b/module-8/Hackett_Mod8_2.html
@@ -22,8 +22,8 @@
         <div class="card-title">
            <p>Top 5 Favorite Movies</p> 
         </div>
-        <div class="card-content" id="movies">
-         <table>
+        <div class="card-content" >
+         <table class="movies">
             <tr>
                 <th>Movie Name</th>
                 <th>Two Characters</th>
