--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="module-4/hackett_Mod4_2.html">Assignment 4.2</a></li>
         <li><a href="module-6/Hackett_Mod6_2.html">Assignment 6.2</a></li>
         <li><a href="module-8/Hackett_Mod8_2.html">Assignment 8.2</a></li>
+        <li><a href="module-9/hackett_Mod9_3.html">Assignment 9.3</a></li>
     </ul>
     <h3>Projects</h3>
     <ul>
